fixed contrast errors

--- a/assets/style/order-body.css
+++ b/assets/style/order-body.css
@@ -70,7 +70,7 @@
 }
 
 .error {
-    color: #FF0000;
+    color: black;
 }
 
 .order button:hover {
